Kubernets-og/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: todoapp-backend
  labels:
    app: todoapp-backend
spec:
  replicas: 1
  selector:
      app: todoapp-backend
  template:
    metadata:
      labels:
        app: todoapp-backend  
    spec:
      containers:
        - name: todoapp-backend
          image: roni313233/todoapp-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
