Kubernets-og/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: backend-svc
    labels:
        app: backend
spec:
    selector: 
        app: backend
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
          nordport: 30080
    type: NodePort
