Kubernets-og/phpmyadmin-deployment.yml
apiVersion: apps/v1
kind: Service
metadata: 
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
      app: phpmyadmin
  templets:
  metdata:
    labels:
      app: phpmyadmin
  spec:
    containers:
      - name: phpmyadmin
        image: mysql:5.7
        imagePullPolicy: Always
        ports:
          - containerPort: 8081
        env:
          - name: PMA_HOST
            value: "mysql"
          - name: MYSQL_ROOT_PASSWORD
            value: "Test@123"
