Kubernets-og/phpmyadmin-svc.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: phpmyadmin-svc
  labels:
    app: phpmyadmin
spec:
  selector:
    app: phpmyadmin
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081 
      nodePort: 30081
  type: NodePort
